@@ -115,6 +115,8 @@ NOTE: sorry, this is very raw :)
  
  ************************* BUGS: *************************
  
+* when stopping play with spacebar, pause button remains (only on my old PPC?)
+ 
 * crashes when opening 2+ files from the finder
 * "follow playback" : hard to follow when horizontal scrolling is changed (Change only on measure change?)
 * undos in guitar editor that rely on string and fret will be wrong if tuning changed meanwhile
